<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LiveFit</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_fitness_home">Fitness Home</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="title_activity_workout_details">Workout Details</string>
    <string name="do_workout">Do Workout</string>
    <string name="title_create_new_workout">Create a New Workout</string>
    <string name="exercise_name">Exercise Name:</string>
    <string name="workout_name">Workout Name:</string>
    <string name="enter_workout_name">Enter Workout Name</string>
    <string name="exercises">Exercises</string>
    <string name="add_an_exercise">Add an Exercise</string>
    <string name="save_workout">Save Workout</string>
    <string name="cancel">Cancel</string>
    <string name="title_add_exercise">Add Exercise</string>
    <string name="enter_exercise_name">Enter Exercise Name</string>
    <string name="exercise_description">Exercise Description:</string>
    <string name="enter_a_description_of_the_exercise">Enter a description of the exercise</string>
    <string name="complete_your_exercise_in_seconds_or_reps">Complete your workout in seconds or in reps?</string>
    <string name="seconds">Seconds</string>
    <string name="reps">Reps</string>
    <string name="enter_exercise_time">Enter exercise time (in seconds)</string>
    <string name="enter_exercise_reps">Enter reps to complete for exercise</string>
    <string name="add_this_exercise">Add This Exercise</string>

</resources>
