<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monday"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="monday workout"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tuesday"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="tuesday workout"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wednesday"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="wednesday workout"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thursday"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="thursday workout"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/friday"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="friday workout"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saturday"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="saturday workout"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sunday"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="sunday workout"/>

</LinearLayout>
